--- a/pages/voorwaarden.html
+++ b/pages/voorwaarden.html
@@ -6,36 +6,39 @@ permalink: voorwaarden
 title: Voorwaarden
 ---
 
-<div class="row">
-
-    <div class="col-12">
-        <h2>Algemene voorwaarden</h2>
+<div  class="container">
+    <div class="row">
+        <div class="col-9 col-md-8 col-lg-6 title">
+            <h1>Algemene voorwaarden</h1>
+        </div>
     </div>
 
-    <div class="col-12">
-        <p>Bij gebruik maken van ons product vragen wij u rekening te houden met de volgende voorwaardes. 
-            Als u deze naleeft kunnen wij u garanderen op een uniek ervaring met onze geweldige teddy.
-        </p>
+    <div class="row">
+        <div class="col-12">
+            <p>Bij gebruik maken van ons product vragen wij u rekening te houden met de volgende voorwaardes. 
+                Als u deze naleeft kunnen wij u garanderen op een uniek ervaring met onze geweldige teddy.
+            </p>
 
-        <p>Dit product is niet bedoeld om:</p>
+            <p>Dit product is niet bedoeld om:</p>
 
-        <ul>
-            <li><img src="{{ site.baseurl }}/images/lijstje.png" class="" alt="teddy">Met te gooien</li>
-            <li><img src="{{ site.baseurl }}/images/lijstje.png" class="" alt="teddy">Te beschadigen</li>
-            <li><img src="{{ site.baseurl }}/images/lijstje.png" class="" alt="teddy">Vuil te maken</li>
-        </ul>
+            <ul>
+                <li><img src="{{ site.baseurl }}/images/lijstje.png"  alt="bullet lijstje">Met te gooien</li>
+                <li><img src="{{ site.baseurl }}/images/lijstje.png" alt="bullet lijstje">Te beschadigen</li>
+                <li><img src="{{ site.baseurl }}/images/lijstje.png" alt="bullet lijstje">Vuil te maken</li>
+            </ul>
 
-        <p>Gelieve onze teddy met respect te behandelen.</p>
+            <p>Gelieve onze teddy met respect te behandelen.</p>
 
-        <p>Indien wij schade opmerken zal u hiervoor u waarborg van 10 euro niet terug krijgen met een extra schadevergoeding.</p>
+            <p>Indien wij schade opmerken zal u hiervoor u waarborg van 10 euro niet terug krijgen met een extra schadevergoeding.</p>
+        </div>
+
+        <div class="col-4">
+            <img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid" alt="teddy">
+        </div>
+
+        <div class="col-8">
+            <a class="btn btn-primary" href="reservatie.html">Teddy reserveren</a>
+        </div>
+
     </div>
-
-    <div class="col-2">
-        <img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid" alt="teddy">
-    </div>
-
-    <div class="col-2">
-        <a class="btn btn-primary" href="reservatie.html">Teddy reserveren</a>
-    </div>
-
-</div>
+</div> <!-- container -->
