--- a/pages/product.html
+++ b/pages/product.html
@@ -5,49 +5,50 @@ permalink: product
 # ─────────────────────
 title: Meet Teddy
 ---
-
-<div class="row">
-    <div class="col-12">
-        <h2>Meet Teddy!</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-8 col-md-5 col-lg-3  title">
+            <h1>Meet Teddy!</h1>
+        </div>
     </div>
 
-    <div class="col-5 ">
-        <a class="btn btn-info" href="reservatie.html">Reserveer mij</a>
-        <img src="{{ site.baseurl }}/images/teddy_2.jpg" class="img-fluid" alt="teddy">
-    </div>
+    <div class="row">
+        <div class="col-12 col-md-5 col-lg-5 order-1 order-md-2">
+            <a class="btn btn-info" href="reservatie.html">Reserveer mij</a>
+            <img src="{{ site.baseurl }}/images/teddy_2.jpg" class="img-fluid" alt="teddy">
+        </div>
 
-    <div class="col-12 col-lg-6">
-        <p>Teddy is de zachtste teddybeer ooit. 
-            Hij is hier om jou gezelschap te houden en je film ervaring onvergetelijk te maken.
-        </p>
+        <div class="col-12 col-md-7 col-lg-7 order-2 order-md-1">
+            <p>Teddy is de zachtste teddybeer ooit. 
+                Hij is hier om jou gezelschap te houden en je film ervaring onvergetelijk te maken.
+            </p>
                 
-        <p>Hij praat niet tijdens de film.
+            <p>Hij praat niet tijdens de film.
                 Hij spoilt niet tijdens de film.
                 Je hoeft zelfs geen eten voor hem te betalen.  
-        </p>
+            </p>
 
-        <p>Hij is beschikbaar voor iedereen! 
-            Kinderen die gezelschap nodig hebben tijdens de film en ouders die eens een rustige film ervaring met hun kinderen  willen. 
-        </p>
+            <p>Hij is beschikbaar voor iedereen! 
+                Kinderen die gezelschap nodig hebben tijdens de film en ouders die eens een rustige film ervaring met hun kinderen  willen. 
+            </p>
+        </div>
+
+        <div class="col-12 col-md-7 col-lg-7 order-3 order-md-4">
+            <p>Maar ook voor zij die denken dat het raar is alleen naar de film te gaan en daarom niet durven.
+            </p>
+
+            <p>Hebben vrienden geen tijd maar wil je toch graag gaan? Teddy is altijd bereid mee te gaan. 
+            </p>
+
+            <p>Dit allemaaal voor maar 5 euro per uur dat je Teddy's gezelschap krijgt, hierin zit natuurlijk een zitplaats voor Teddy inbegrepen.
+            </p>
+        </div>
+
+        <div class="col-12 col-md-5 col-lg-5 order-4 order-md-3">
+            <img src="{{ site.baseurl }}/images/teddy_3.jpg" class="img-fluid" alt="teddy">
+        
+            <a class="btn btn-info" href="reservatie.html">Reserveer mij nu!</a>
+        </div>
+
     </div>
-
-    <div class="col-12 col-lg-6">
-        <p>Maar ook voor zij die denken dat het raar is alleen naar de film te gaan en daarom niet durven.
-         </p>
-
-        <p>Hebben vrienden geen tijd maar wil je toch graag gaan? Teddy is altijd bereid mee te gaan. 
-        </p>
-
-        <p>Dit allemaaal voor maar 5 euro per uur dat je Teddy's gezelschap krijgt, hierin zit natuurlijk een zitplaats voor Teddy inbegrepen.
-        </p>
-    </div>
-
-    <div class="col-7">
-        <img src="{{ site.baseurl }}/images/teddy_3.jpg" class="img-fluid" alt="teddy">
-    </div>
-
-    <div class="col-12">
-        <a class="btn btn-info" href="reservatie.html">Reserveer mij nu!</a>
-    </div>
-
-</div>
+</div> <!-- container -->
