--- a/pages/reservatie_bevestiging.html
+++ b/pages/reservatie_bevestiging.html
@@ -1,25 +1,43 @@
 ---
 layout   : default
-permalink: reservatie_gegevens
+permalink: reservatie_bevestiging
 # Custom Page Variables
 # ─────────────────────
-title: Reservatie
+title: Bedankt
 ---
 
-<div class="row">
-    <div class="col-12">
-        <h2>Reservatie</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-8 title">
+            <h2>Reservatie</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <nav aria-label="breadcrumb" role="navigation">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">gegevens</li>
+                    <li class="breadcrumb-item">betalen</li>
+                    <li class="breadcrumb-item active" aria-current="page">bevestiging</li>
+                </ol>
+            </nav>
+
+            <p class="thankyou">Bedankt voor je reservatie!</p>
+
+            <a href="index.html"><img src="{{ site.baseurl }}/images/teddy_bedankt.png" class="img-fluid" alt="blije teddy">
+            </a> 
+
+            <p>Teddy zal klaar liggen aan de kassa van Kinepolis Gent op 01/01/2017 om 19u00. 
+            </p>
+
+            <p>U zal een bevestigingsmail ontvangen. Dit kan enkele minutenduren. <br>
+            U wordt een kwartier vooraf verwacht aan de kassa, gelieve deze mail daar ook te vertonen.
+                </p>
+
+            <p>Daarnaast zal u ook gevraagd worden u pas of een andere vorm van identiteit af te geven aan de kassa. Bij de teruggave van Teddy na de film wordt deze uiteraard weer terug gegeven.
+            </p>
+        </div>
     </div>
 </div>
-    
-<div class="row">
-    <div class="col-12">
-        <nav aria-label="breadcrumb" role="navigation">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">gegevens</li>
-                <li class="breadcrumb-item">betalen</li>
-                <li class="breadcrumb-item active" aria-current="page>bevestiging</li>
-            </ol>
-        </nav>
-    </div>
-</div>
+
