--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,7 @@ title: Teddy2Rent
         </div>
     </div>
 
-    <div class="row blue_bg pijltje_box">
+    <div class="row blue_bg row_center">
         <div class="col-3 col-md-2 col-lg-1">
             <a href="#deel_2"><img src="{{ site.baseurl }}/images/pijltje_beneden.png" class="pijltje" alt="pijltje naar beneden">
             </a>
@@ -54,7 +54,7 @@ title: Teddy2Rent
         </div>
     </div> <!-- row -->
 
-    <div class="row pijltje_box">
+    <div class="row row_center">
         <div class="col-3 col-md-2 col-lg-1">
             <a href="#top"><img src="{{ site.baseurl }}/images/pijltje_boven.png" class="pijltje" alt="pijltje naar boven">
             </a>
