--- a/pages/reservatie.html
+++ b/pages/reservatie.html
@@ -7,8 +7,8 @@ title: Reservatie
 ---
 <div class="container">
     <div class="row">
-        <div class="col-7 col-md-4 title">
-            <h1>Reservatie</h1>
+        <div class="col-7 col-md-4">
+            <h1 class="title">Reservatie</h1>
         </div>
     </div>
 
@@ -169,7 +169,7 @@ title: Reservatie
             </div> <!-- row-->
             <p class="note"><img src="{{ site.baseurl }}/images/lijstje.png" alt="verplicht veld"> Vul hier het begin en eind uur van de film toe</p>
 
-            <a class="btn btn-primary" href="reservatie_gegevens.html">Volgende</a>
+            <a class="btn btn-primary float-right" href="reservatie_gegevens.html">Volgende</a>
 
         </div>
     </div>
