--- a/pages/voorwaarden.html
+++ b/pages/voorwaarden.html
@@ -8,13 +8,13 @@ title: Voorwaarden
 
 <div  class="container">
     <div class="row">
-        <div class="col-9 col-md-8 col-lg-6 title">
-            <h1>Algemene voorwaarden</h1>
+        <div class="col-9 col-md-8 col-lg-6">
+            <h1 class="title">Algemene voorwaarden</h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 col-md-7 col-lg-7">
             <p>Bij gebruik maken van ons product vragen wij u rekening te houden met de volgende voorwaardes. 
                 Als u deze naleeft kunnen wij u garanderen op een uniek ervaring met onze geweldige teddy.
             </p>
@@ -32,12 +32,12 @@ title: Voorwaarden
             <p>Indien wij schade opmerken zal u hiervoor u waarborg van 10 euro niet terug krijgen met een extra schadevergoeding.</p>
         </div>
 
-        <div class="col-4">
+        <div class="col-4 col-md-2 col-lg-2 align-self-center">
             <img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid" alt="teddy">
         </div>
 
-        <div class="col-8">
-            <a class="btn btn-primary" href="reservatie.html">Teddy reserveren</a>
+        <div class="col-8 col-md-3 col-lg-3 align-self-center">
+            <a class="btn btn-primary" href="reservatie.html">Reserveer mij!</a>
         </div>
 
     </div>
