--- a/pages/over_ons.html
+++ b/pages/over_ons.html
@@ -8,8 +8,8 @@ title: Contact
 
 <div class="container">
     <div class="row">
-        <div class="col-8 col-md-5 col-lg-3 title">
-            <h1>Wie zijn wij</h1>
+        <div class="col-8 col-md-5 col-lg-4">
+            <h1 class="title">Wie zijn wij</h1>
         </div>
     </div>
 
@@ -25,7 +25,7 @@ title: Contact
                 </div><!-- geneste kolom -->
         
                 <div class="col-7 align-self-center">
-                    <a class="btn btn-info" href="reservatie.html">Reserveer mij</a>
+                    <a class="btn btn-info float-left" href="reservatie.html">Reserveer mij</a>
                 </div>
             </div> <!-- row -->
         </div>
