--- a/pages/product.html
+++ b/pages/product.html
@@ -7,18 +7,38 @@ title: Meet Teddy
 ---
 <div class="container">
     <div class="row">
-        <div class="col-8 col-md-5 col-lg-3  title">
-            <h1>Meet Teddy!</h1>
+        <div class="col-9 col-md-5 col-lg-3">
+            <h1 class="title">Meet Teddy!</h1>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-md-5 col-lg-5 order-1 order-md-2">
-            <a class="btn btn-info" href="reservatie.html">Reserveer mij</a>
-            <img src="{{ site.baseurl }}/images/teddy_2.jpg" class="img-fluid" alt="teddy">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-5 col-lg-3">
+            <div id="carouselIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselIndicators" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{ site.baseurl }}/images/teddy_3.png" class="img-fluid teddy_3 d-block w-100" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ site.baseurl }}/images/teddy_4.png" class="img-fluid teddy_3 d-block w-100" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ site.baseurl }}/images/teddy_5.png" class="img-fluid teddy_3 d-block w-100" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ site.baseurl }}/images/teddy_6.png" class="img-fluid teddy_3 d-block w-100" alt="Third slide">
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="col-12 col-md-7 col-lg-7 order-2 order-md-1">
+        <div class="col-12 col-md-7 col-lg-5 align-self-end">
             <p>Teddy is de zachtste teddybeer ooit. 
                 Hij is hier om jou gezelschap te houden en je film ervaring onvergetelijk te maken.
             </p>
@@ -32,8 +52,9 @@ title: Meet Teddy
                 Kinderen die gezelschap nodig hebben tijdens de film en ouders die eens een rustige film ervaring met hun kinderen  willen. 
             </p>
         </div>
-
-        <div class="col-12 col-md-7 col-lg-7 order-3 order-md-4">
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-7 col-lg-5 order-1 order-md-3">
             <p>Maar ook voor zij die denken dat het raar is alleen naar de film te gaan en daarom niet durven.
             </p>
 
@@ -44,10 +65,12 @@ title: Meet Teddy
             </p>
         </div>
 
-        <div class="col-12 col-md-5 col-lg-5 order-4 order-md-3">
-            <img src="{{ site.baseurl }}/images/teddy_3.jpg" class="img-fluid" alt="teddy">
-        
-            <a class="btn btn-info" href="reservatie.html">Reserveer mij nu!</a>
+        <div class="col-6 col-md-3 col-lg-2 order-2 order-md-1 align-self-center">
+            <a class="btn btn-info" href="reservatie.html">Reserveer mij!</a>
+        </div>
+
+        <div class="col-6 col-md-2 col-lg-1 order-3 order-md-2 align-self-end">
+            <img src="{{ site.baseurl }}/images/teddy_2.png" class="img-fluid teddy_4" alt="teddy">
         </div>
 
     </div>
