--- a/pages/reservatie_bevestiging.html
+++ b/pages/reservatie_bevestiging.html
@@ -8,8 +8,8 @@ title: Bedankt
 
 <div class="container">
     <div class="row">
-        <div class="col-8 title">
-            <h2>Reservatie</h2>
+        <div class="col-7 col-md-4">
+            <h2 class="title">Reservatie</h2>
         </div>
     </div>
 
