--- a/pages/index.html
+++ b/pages/index.html
@@ -5,14 +5,10 @@ permalink: /
 # ─────────────────────
 title: Teddy2Rent
 ---
-    <!--<div class="jumbotron">
-        <h1 class="display-3">{{ page.title }}</h1>
-    </div>
 
-    <a class="btn btn-primary" href="http://getbootstrap.com/docs/4.0/getting-started/introduction/">Bootstrap 4 documentation</a> -->
 <div class="container">
     <div class="row blue_bg" id="top">
-        <div class="col-4 col-md-1 order-1 order-md-1"></div>
+        <div class="col-4 col-md-1 col-lg-1 order-1 order-md-1"></div> 
 
         <div class="col-8 col-md-6 col-lg-4 order-2 order-md-3 intro">
             <div class="intro_bg">
@@ -21,7 +17,7 @@ title: Teddy2Rent
             </div>
         </div>
 
-        <div class="col-9 col-md-5 col-md-5 order-3 order-md-2">
+        <div class="col-9 col-md-5 col-lg-5 order-3 order-md-2">
             <img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid teddy_1" alt="teddy">
         </div>
     </div>
@@ -34,11 +30,11 @@ title: Teddy2Rent
     </div>
 
     <div class="row" id="deel_2">
-        <div class="col-3 col-lg-5 teddy_2">
-            <a href="reservatie.html"><img src="{{ site.baseurl }}/images/teddy_1.png" class="sticky" alt="teddy"></a>
+        <div class="col-3 col-md-3 col-lg-5 teddy_2">
+            <a href="reservatie.html" class="tooltip-test" title="Teddy reserveren"><img src="{{ site.baseurl }}/images/teddy_1.png" class="sticky" alt="teddy"></a>
         </div>
 
-        <div class="col-9 col-lg-7 neg_blue">
+        <div class="col-9 col-md-9 col-lg-7 neg_blue">
             <p>Gaat u graag naar de film?</p>
             <p>Maar bent u het beu dat u gezelschap niet kan zwijgen of soms zelfs spoilt?</p>
             <p>Hebt u van die luidruchtige kinderen die niet hun eigen knuffel mogen mee nemen?</p>
@@ -50,7 +46,7 @@ title: Teddy2Rent
         </div>
 
         <div class="col-12 text_center">
-            <p>Twijfel dan zeker niet langer! Klik op teddy zijn buikje en maak je afspraak met onze Mr. Teddy.</p>
+            <p>Twijfel dan zeker niet langer! <br>Klik op teddy zijn buikje en maak je afspraak met onze Mr. Teddy.</p>
         </div>
     </div> <!-- row -->
 
