--- a/pages/product.html
+++ b/pages/product.html
@@ -70,7 +70,7 @@ title: Meet Teddy
         </div>
 
         <div class="col-6 col-md-2 col-lg-1 order-3 order-md-2 align-self-end">
-            <img src="{{ site.baseurl }}/images/teddy_2.png" class="img-fluid teddy_4" alt="teddy">
+            <a href="reservatie.html" title="Teddy reserveren"><img src="{{ site.baseurl }}/images/teddy_2.png" class="img-fluid teddy_4" alt="teddy"></a>
         </div>
 
     </div>
