--- a/pages/over_ons.html
+++ b/pages/over_ons.html
@@ -21,7 +21,7 @@ title: Contact
         
             <div class="row">
                 <div class="col-5">
-                    <img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid" alt="teddy">
+                    <a href="reservatie.html" title="Teddy reserveren"><img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid" alt="teddy"></a>
                 </div><!-- geneste kolom -->
         
                 <div class="col-7 align-self-center">
@@ -57,7 +57,7 @@ title: Contact
             <div class="collapse" id="collapse_thankyou">
                 <div class="card card-body card_thankyou">
                     Dankjewel, wij reageren zo snel mogelijk!
-                    <a href="index.html"><img src="{{ site.baseurl }}/images/teddy_bedankt.png" class="img-fluid" alt="blije teddy">
+                    <a href="index.html" class="tooltip-test" title="Naar startpagina"><img src="{{ site.baseurl }}/images/teddy_bedankt.png" class="img-fluid" alt="blije teddy">
                 </div>
             </div>
         </div>
