--- a/pages/reservatie_bevestiging.html
+++ b/pages/reservatie_bevestiging.html
@@ -13,29 +13,37 @@ title: Bedankt
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6">
             <nav aria-label="breadcrumb" role="navigation">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item">gegevens</li>
-                    <li class="breadcrumb-item">betalen</li>
-                    <li class="breadcrumb-item active" aria-current="page">bevestiging</li>
+                    <li class="breadcrumb-item mx-auto">gegevens</li>
+                    <li class="breadcrumb-item mx-auto">|</li>
+                    <li class="breadcrumb-item mx-auto">betalen</li>
+                    <li class="breadcrumb-item mx-auto">|</li>
+                    <li class="breadcrumb-item active mx-auto" aria-current="page">bevestiging</li>
                 </ol>
             </nav>
+        </div>
+    </div>
 
-            <p class="thankyou">Bedankt voor je reservatie!</p>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-4 col-lg-3">
+            <p class="thankyou">Bedankt voor u reservatie!</p>
 
-            <a href="index.html"><img src="{{ site.baseurl }}/images/teddy_bedankt.png" class="img-fluid" alt="blije teddy">
+            <a href="index.html" class="tooltip-test" title="Terug naar startpagina"><img src="{{ site.baseurl }}/images/teddy_bedankt.png" class="img-fluid pijltje" alt="blije teddy">
             </a> 
+        </div>
 
-            <p>Teddy zal klaar liggen aan de kassa van Kinepolis Gent op 01/01/2017 om 19u00. 
+        <div class="col-12 col-md-6 col-lg-5">
+            <p>Teddy zal klaar liggen aan de <span class="accent_bold">kassa van Kinepolis Gent op 01/01/2017 om 19u00.</span>
             </p>
 
-            <p>U zal een bevestigingsmail ontvangen. Dit kan enkele minutenduren. <br>
-            U wordt een kwartier vooraf verwacht aan de kassa, gelieve deze mail daar ook te vertonen.
+            <p>Je zal een <span class="accent_bold">bevestigingsmail</span> ontvangen. Dit kan enkele ogenblikken in beslag nemen. <br>
+             Verder wordt u een kwartier vooraf verwacht aan de kassa, gelieve deze mail daar ook te vertonen.
                 </p>
 
-            <p>Daarnaast zal u ook gevraagd worden u pas of een andere vorm van identiteit af te geven aan de kassa. Bij de teruggave van Teddy na de film wordt deze uiteraard weer terug gegeven.
+            <p>Daarnaast zal u ook gevraagd worden <span class="accent_bold">uw paspoort of een andere vorm van identiteit</span> als waarborg in te dienen aan de kassa. Bij de teruggave van Teddy na de film krijgt u deze uiteraard ook terug.
             </p>
         </div>
     </div>
