--- a/pages/reservatie_gegevens.html
+++ b/pages/reservatie_gegevens.html
@@ -13,51 +13,69 @@ title: Reservatie
         </div>
     </div>
     
-    <div class="row">
-        <div class="col-12">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-12">
             <p>U gaat een reservatie plaatsen voor  Teddy op 01/01/2017. Moment: middag. <br>
                 <span class="note">Indien dit niet juist is <a href="reservatie.html">klik hier</a> </span>
             </p>
+            <p>U regestratie is bijna voltooid. Nog een paar stappen te gaan.</p>
         </div>
 
-        <div class="col-12">
-            <p>U regestratie is bijna voltooid.Nog een paar stappen te gaan.</p>
+        <div class="col-12 col-md-8 col-lg-6">
             <nav aria-label="breadcrumb" role="navigation">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">gegevens</li>
-                    <li class="breadcrumb-item">betalen</li>
-                    <li class="breadcrumb-item">bevestiging</li>
+                    <li class="breadcrumb-item active mx-auto" aria-current="page">gegevens</li>
+                    <li class="breadcrumb-item mx-auto">|</li>
+                    <li class="breadcrumb-item mx-auto">betalen</li>
+                    <li class="breadcrumb-item mx-auto">|</li>
+                    <li class="breadcrumb-item mx-auto">bevestiging</li>
                 </ol>
             </nav>
         </div>
+    </div>
 
-        <div class="col-12">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-5 col-lg-4">
             <form>
                 <!-- achternaam -->
                 <div class="form-group">
                     <label for="last-name">Naam: <img src="{{ site.baseurl }}/images/lijstje.png"  alt="verplicht veld"></label>
-                    <input type="last-name" class="form-control" id="last-name" placeholder="...">    
+                    <input type="last-name" class="form-control" id="last-name" placeholder="Van Pluche">    
                 </div>
+            </form>
+        </div>
 
+        <div class="col-12 col-md-5 col-lg-4">
+            <form>
                 <!-- voornaam -->
                 <div class="form-group">
                     <label for="name">Voornaam: <img src="{{ site.baseurl }}/images/lijstje.png"  alt="verplicht veld"></label>
-                    <input type="name" class="form-control" id="name" placeholder="...">    
+                    <input type="name" class="form-control" id="name" placeholder="Teddy">    
                 </div>
+            </form>
+        </div>
 
+        <div class="col-12 col-md-6 col-lg-5">
+            <form>
                 <!-- mail -->
                 <div class="form-group">
                     <label for="mail">e-mail: <img src="{{ site.baseurl }}/images/lijstje.png"  alt="verplicht veld"></label>
-                    <input type="e-mail" class="form-control" id="mail" placeholder="...">    
+                    <input type="e-mail" class="form-control" id="mail" placeholder="teddy.vanpluche@gmail.com">    
                 </div>
+            </form>
+        </div>
 
+        <div class="col-12 col-md-4 col-lg-3">
+            <form>
                 <!-- tel -->
                 <div class="form-group">
                     <label for="phone_number">Telefoon:</label>
-                    <input type="phone_number" class="form-control" id="phone_number" placeholder="...">    
+                    <input type="phone_number" class="form-control" id="phone_number" placeholder="0476 26 43 53">
                 </div>
             </form>
-        
+        </div>
+
+        <div class="col-12 col-md-8 col-lg-6">
             <p class="note"><img src="{{ site.baseurl }}/images/lijstje.png"  alt="verplicht veld"> Verplichte velden</p>
 
             <div class="form-check check_paw">
