--- a/pages/voorwaarden.html
+++ b/pages/voorwaarden.html
@@ -15,7 +15,7 @@ title: Voorwaarden
 
     <div class="row">
         <div class="col-12 col-md-7 col-lg-7">
-            <p>Bij gebruik maken van ons product vragen wij u rekening te houden met de volgende voorwaardes. 
+            <p>Bij gebruik maken van ons product vragen wij u rekening te houden met de volgende voorwaarden. 
                 Als u deze naleeft kunnen wij u garanderen op een uniek ervaring met onze geweldige teddy.
             </p>
 
@@ -29,14 +29,14 @@ title: Voorwaarden
 
             <p>Gelieve onze teddy met respect te behandelen.</p>
 
-            <p>Indien wij schade opmerken zal u hiervoor u waarborg van 10 euro niet terug krijgen met een extra schadevergoeding.</p>
+            <p>Indien wij schade opmerken komt bovenop de normale kosten nog een een extra schadevergoeding.</p>
         </div>
 
-        <div class="col-4 col-md-2 col-lg-2 align-self-center">
-            <img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid" alt="teddy">
+        <div class="col-5 col-md-2 col-lg-2 align-self-center">
+            <a href="reservatie.html" title="Teddy reserveren"><img src="{{ site.baseurl }}/images/teddy_1.png" class="img-fluid" alt="teddy"></a>
         </div>
 
-        <div class="col-8 col-md-3 col-lg-3 align-self-center">
+        <div class="col-7 col-md-3 col-lg-3 align-self-center">
             <a class="btn btn-primary" href="reservatie.html">Reserveer mij!</a>
         </div>
 
