--- a/pages/index.html
+++ b/pages/index.html
@@ -1,8 +1,6 @@
 ---
 layout   : default
 permalink: /
-# Custom Page Variables
-# ─────────────────────
 title: Teddy2Rent
 ---
 
@@ -11,7 +9,7 @@ title: Teddy2Rent
         <div class="col-4 col-md-1 col-lg-1 order-1 order-md-1"></div> 
 
         <div class="col-8 col-md-6 col-lg-4 order-2 order-md-3 intro">
-            <div class="intro_bg">
+            <div>
                 <p>Hallo daar! <br> Ik ben Teddy.</p>
                 <a class="btn btn-primary btn-lg" href="reservatie.html">Reserveer mij</a>
             </div>
@@ -48,13 +46,12 @@ title: Teddy2Rent
         <div class="col-12 text_center">
             <p>Twijfel dan zeker niet langer! <br>Klik op teddy zijn buikje en maak je afspraak met onze Mr. Teddy.</p>
         </div>
-    </div> <!-- row -->
+    </div>
 
     <div class="row row_center">
         <div class="col-3 col-md-2 col-lg-1">
             <a href="#top"><img src="{{ site.baseurl }}/images/pijltje_boven.png" class="pijltje" alt="pijltje naar boven">
             </a>
         </div>
-    </div> <!-- row -->
-
+    </div>
 </div> <!-- container -->
