--- a/pages/reservatie_gegevens.html
+++ b/pages/reservatie_gegevens.html
@@ -1,8 +1,6 @@
 ---
 layout   : default
 permalink: reservatie_gegevens
-# Custom Page Variables
-# ─────────────────────
 title: Reservatie
 ---
 
@@ -18,7 +16,8 @@ title: Reservatie
             <p>U gaat een reservatie plaatsen voor  Teddy op 01/01/2017. Moment: middag. <br>
                 <span class="note">Indien dit niet juist is <a href="reservatie.html">klik hier</a> </span>
             </p>
-            <p>U regestratie is bijna voltooid. Nog een paar stappen te gaan.</p>
+            <p>U regestratie is bijna voltooid. Nog een paar stappen te gaan.
+            </p>
         </div>
 
         <div class="col-12 col-md-8 col-lg-6">
